simplify db reading